--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="KIRA - Konkuk University Investment & Research Academy" />
     <meta property="og:description" content="건국대학교를 대표하는 재무학회로서, 자본시장에 대한 체계적 이해와 실전형 리서치 역량을 기릅니다." />
-    <meta property="og:url" content="https://pompompuririn66.github.io/" />
+    <meta property="og:url" content="https://pompompurinrin66.github.io/" />
     <meta property="og:site_name" content="KIRA" />
-    <meta property="og:image" content="https://pompompuririn66.github.io/KIRA_logo.png?v=2" />
+    <meta property="og:image" content="https://pompompurinrin66.github.io/KIRA_logo.png?v=2" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="KIRA logo" />
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="KIRA - Konkuk University Investment & Research Academy" />
     <meta name="twitter:description" content="건국대학교를 대표하는 재무학회로서, 자본시장에 대한 체계적 이해와 실전형 리서치 역량을 기릅니다." />
-    <meta name="twitter:image" content="https://pompompuririn66.github.io/KIRA_logo.png?v=2" />
+    <meta name="twitter:image" content="https://pompompurinrin66.github.io/KIRA_logo.png?v=2" />
 
 
     <!-- Pretendard Font -->
